--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Jost:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Puritan:wght@400;700&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
