add links to github and new project descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Jost:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Puritan:wght@400;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Anderson Bautista Software Developer | web developer | Software Engineer | React | Redux | Javascript | Node | Express</title>
   </head>
   <body>
     <div id="root"></div>
