--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Anderson Bautista Softwate Engineer"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property='og:title' content='Anderson Bautista | Software Engineer | Web Develper'/>
+    <meta property='og:image' content='public/linkedin_post_img-format.png'/>
+    <meta property='og:description' content='Fullstack developer based in New York'/>
+    <meta property='og:url' content='http://andev.io/'/>
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
