setting up deployment fixes for marketing

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000000" />
     <meta property='og:title' content='Anderson Bautista | Software Engineer | Web Develper'/>
-    <meta property='og:image' content='public/linkedin_post_img-format.png'/>
-    <meta property='og:description' content='Fullstack developer based in New York'/>
+    <meta property='og:image' content='https://i.postimg.cc/d0yM0wGr/Aanderson-Bautista-website.png'/>
+    <meta property='og:description' content='Software Engineer Developer based in New York'/>
     <meta property='og:url' content='http://andev.io/'/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
