--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <meta name="theme-color" content="#000000" />
 
-    <meta property='og:title' content='Anderson Bautista | Software Engineer | Web Develper'/>
+    <meta property='og:title' content='Anderson Bautista | Software Engineer | Web Developer'/>
     <meta property='og:image' content='https://i.postimg.cc/d0yM0wGr/Anderson-Bautista-website.png'/>
     <meta property='og:description' content='Software Engineer Developer based in New York'/>
     <meta property='og:url' content='http://andev.io/'/>
